# Osiris

./: CMakeLists.txt  README.md
src/: ColorFinder.cpp  FilteredCircularBuffer.hpp  Osiris.cpp
